Fixed Bios Alignment

--- a/css/report.css
+++ b/css/report.css
@@ -219,10 +219,6 @@ li {
   margin-left: 0;
 }
 
-.bios:last-of-type {
-  margin-left: 5rem;
-}
-
 /* ----------------------------------------------------
    N A V I G A T I O N
    ------------------------------------------------------- */
